--- a/server/public/stylesheets/weeklyplans.css
+++ b/server/public/stylesheets/weeklyplans.css
@@ -18,6 +18,19 @@
     text-shadow: 0 0;
 }
 
+.weekly-planning-lesson-time-subject {
+    margin-left: 2px;
+    margin-right: 2px;
+    background: whitesmoke;
+    padding: 2px;
+    border: 1px solid #c3c3c3;
+    border-radius: 15%;
+    font-size: xx-small;
+    line-height: 5px;
+    color: #0f0f0f;
+    text-shadow: 0 0;
+}
+
 .weekly-plan-subject {
     /*border: 1px solid #e3e3e3;*/
     padding: 0.75rem;
