--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -22,22 +22,46 @@
                     @if(maybeClassSubContext.get.isInstanceOf[models.timetoteach.ui.WEEKLY_VIEW.type]) {
                         <li class="nav-item">
                             <a role="button" class="btn btn-warning btn-sm btn-block curriculum-area-button"
-                            href="#">
+                            href="@controllers.planning.weekly.routes.WeeklyPlanningController.weeklyViewOfWeeklyPlanning(classDetails.id.id)">
                                 Weekly View
                             </a>
                         </li>
                     } else {
                         <li class="nav-item">
-                            <a class="btn btn-light text-dark btn-sm class-level-button" role="button" href="#">
+                            <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                            href="@controllers.planning.weekly.routes.WeeklyPlanningController.weeklyViewOfWeeklyPlanning(classDetails.id.id)">
                                 Weekly View
+                            </a>
+                        </li>
+                    }
+
+                    @if(maybeClassSubContext.get.isInstanceOf[models.timetoteach.ui.WEEKLY_PLANNING.type]) {
+                        <li class="nav-item">
+                            <a role="button" class="btn btn-warning btn-sm btn-block curriculum-area-button"
+                            href="#">
+                                Weekly Planning
+                            </a>
+                        </li>
+                    } else {
+                        <li class="nav-item">
+                            <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                            href="#">
+                                Weekly Planning
                             </a>
                         </li>
                     }
 
                 } else {
                     <li class="nav-item">
-                        <a class="btn btn-light text-dark btn-sm class-level-button" role="button" href="#">
+                        <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                        href="#">
                             Weekly View
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                        href="#">
+                            Weekly Planning
                         </a>
                     </li>
                 }
