--- a/server/public/stylesheets/weeklyplans.css
+++ b/server/public/stylesheets/weeklyplans.css
@@ -5,7 +5,7 @@
 .weekly-planning-lesson-start-time {
     font-size: xx-small;
     line-height: 5px;
-    color: black;
+    color: white;
     padding: 2px;
     text-shadow: 0 0;
 }
@@ -13,7 +13,7 @@
 .weekly-planning-lesson-end-time {
     font-size: xx-small;
     line-height: 5px;
-    color: black;
+    color: white;
     padding: 2px;
     text-shadow: 0 0;
 }
@@ -21,7 +21,7 @@
 .weekly-planning-lesson-time-subject {
     margin-left: 2px;
     margin-right: 2px;
-    background: whitesmoke;
+    background: white;
     padding: 2px;
     border: 1px solid #c3c3c3;
     border-radius: 15%;
@@ -38,6 +38,7 @@
 
 .weekly-plan-subject-extent {
     padding-bottom: 2rem;
+    background-color: rgba(225, 225, 230, 0.5);
 }
 
 .weekly-plan-subject-name {
@@ -82,7 +83,7 @@
 }
 
 .weekly-plan-spacing-column {
-    background-color: #f0f0f0
+    /*background-color: #f0f0f0*/
 }
 
 .single-eo-or-benchmark {
