--- a/server/app/views/planning/weekly/weeklyView.scala.html
+++ b/server/app/views/planning/weekly/weeklyView.scala.html
@@ -107,7 +107,7 @@
                                                         </u>
                                                     </div>
 
-                                                    <div class="text-center weekly-plan-subject-additional-info text-dark">
+                                                    <div class="text-center weekly-plan-subject-additional-info text-primary">
                                                         <small>
                                                         @{
                                                             val subjectName = subject.subjectDetail.subjectName.toString.toLowerCase.split("_").toList.map(word => word.capitalize).mkString(" ")
@@ -119,7 +119,7 @@
                                                     </div>
 
                                                     <div class="weekly-plan-subject-es-and-os">
-                                                        <div class="weekly-plan-subject-es-and-os-header text-center">
+                                                        <div class="weekly-plan-subject-es-and-os-header text-dark">
                                                         Es & Os
                                                         </div>
                                                         <div class="single-eo-or-benchmark"><strong>EO123</strong>
@@ -127,7 +127,7 @@
                                                     </div>
 
                                                     <div class="weekly-plan-subject-benchmarks">
-                                                        <div class="weekly-plan-subject-benchmarks-header text-center">
+                                                        <div class="weekly-plan-subject-benchmarks-header  text-dark">
                                                         Benchmarks
                                                         </div>
                                                         <div class="single-eo-or-benchmark">Some benchmark one</div>
