--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -21,47 +21,47 @@
                 @if(maybeClassSubContext.isDefined) {
                     @if(maybeClassSubContext.get.isInstanceOf[models.timetoteach.ui.WEEKLY_VIEW.type]) {
                         <li class="nav-item">
-                            <a role="button" class="btn btn-warning btn-sm btn-block curriculum-area-button"
+                            <a role="button" class="btn btn-warning btn-sm btn-block class-level-button"
                             href="@controllers.planning.weekly.routes.WeeklyPlanningController.weeklyViewOfWeeklyPlanning(classDetails.id.id)">
                                 Weekly View
                             </a>
                         </li>
                     } else {
                         <li class="nav-item">
-                            <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                            <a role="button" class="btn btn-light text-dark btn-sm btn-block class-level-button"
                             href="@controllers.planning.weekly.routes.WeeklyPlanningController.weeklyViewOfWeeklyPlanning(classDetails.id.id)">
                                 Weekly View
                             </a>
                         </li>
                     }
 
-                    @if(maybeClassSubContext.get.isInstanceOf[models.timetoteach.ui.WEEKLY_PLANNING.type]) {
+                    @if(maybeClassSubContext.get.isInstanceOf[models.timetoteach.ui.CREATE_WEEKLY_PLAN.type]) {
                         <li class="nav-item">
-                            <a role="button" class="btn btn-warning btn-sm btn-block curriculum-area-button"
-                            href="#">
-                                Weekly Planning
+                            <a role="button" class="btn btn-warning btn-sm btn-block class-level-button"
+                            href="@controllers.planning.weekly.routes.WeeklyPlanningController.createPlanForTheWeek(classDetails.id.id)">
+                                Plan for the Week
                             </a>
                         </li>
                     } else {
                         <li class="nav-item">
-                            <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
-                            href="#">
-                                Weekly Planning
+                            <a class="btn btn-light text-dark btn-sm btn-block class-level-button" role="button"
+                            href="@controllers.planning.weekly.routes.WeeklyPlanningController.createPlanForTheWeek(classDetails.id.id)">
+                                Plan for the Week
                             </a>
                         </li>
                     }
 
                 } else {
                     <li class="nav-item">
-                        <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
-                        href="#">
+                        <a class="btn btn-light text-dark btn-sm btn-block class-level-button" role="button"
+                        href="@controllers.planning.weekly.routes.WeeklyPlanningController.createPlanForTheWeek(classDetails.id.id)">
                             Weekly View
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-light text-dark btn-sm class-level-button" role="button"
+                        <a class="btn btn-light text-dark btn-sm btn-block class-level-button" role="button"
                         href="#">
-                            Weekly Planning
+                            Plan for the Week
                         </a>
                     </li>
                 }
@@ -76,7 +76,8 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <p>Note: The weekly planning is under development - i.e. it will be changing rapidly</p>
+                <p>Note: The weekly planning is under development - i.e. it will be changing rapidly. It is useful to
+                    <em>get an idea</em> of what it will look like.</p>
             </div>
         </div>
         <div class="container-fluid weekly-planning-top-margin">
