--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -283,6 +283,11 @@
                                     }
 
                                 }
+                                    <li class="nav-item">
+                                        <a id="download-termly-plan-pdf" class="btn btn-sm btn-danger btn-block" role="button"
+                                        href="@controllers.planning.termly.routes.DownloadPdfController.downloadClassPdf(maybeClassId.getOrElse("NONE"))">
+                                            Create Termly Plan PDF</a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="col-md-1"></div>
