--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
@@ -69,8 +69,7 @@
             </div>
 
             <div class="termly-plans-overview-section">
-                <h5 class="termly-plans-overview-section-subheader text-center text-dark">
-                    Select the curriculum levels you wish to plan for</h5>
+
                 <div class="row curriculumLevelEarlyFilterSection">
                     <div class="col">
                         <button id="curriculumLevelEarlyFilterButton" type="button" class="btn btn-outline-info btn-sm btn-block">
@@ -95,7 +94,7 @@
                 </div>
 
                 <h5 class="termly-plans-overview-section-header text-center">
-                    Select the Es & Os and/or Benchmarks to cover this term</h5>
+                    Select the curriculum level(s) above, then the Es & Os and/or Benchmarks to cover this term</h5>
 
                 <div id="es-and-os-alert" class="alert alert-danger alert-dismissible fade show text-center" role="alert" >
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -237,13 +236,6 @@
                             }
                 </div>
                 }
-
-            <div id="alert-div" class="text-center">
-                <div id = "alertIfAllFilterButtonsAreOffWarning" class = "alert alert-warning" role = "alert">
-                    <p>No Es & Os or Benchmarks to show because no curriculum levels have been selected.</p>
-                    <p>Please select at least one curriculum level from filters above.</p>
-                </div>
-            </div>
 
             <div class="row">
                 <div class="col-md-8"></div>
