--- a/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectOverallCurriculumAreasForTheTerm.scala.html
@@ -30,28 +30,6 @@
             <h5>Please select the curriculum areas you wish to plan for this term</h5>
         </div>
 
-        <div id="es-and-os-alert" class="alert alert-danger alert-dismissible fade show" role="alert" >
-            <div >
-                <p>
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                    <strong>Note:</strong>
-                    Areas where Es And Os are currently available for testing are :-
-            <ul>
-                <strong><li>Art</li></strong>
-                <strong><li>Drama</li></strong>
-                <strong><li>Music</li></strong>
-                <strong><li>Reading</strong> - Early, First and Second levels only for now</li>
-                <strong><li>Maths</li></strong>
-            </ul>
-                </p>
-
-                <p>Please only select these for now until the rest are populated - should be finished by the end of March</p>
-            </div>
-        </div>
-
-
         <form action="@postSelectedCurriculumAreasUrl.url" method="post" id="needs-validation" novalidate>
             @helper.CSRF.formField
             <div class="row">
@@ -64,16 +42,17 @@
                                 @if(area.niceSpecificValueIfPresent().getOrElse(area.niceValue()) != "Dance") {
                                     <div class="col">
                                         <div class="form-group">
-                                            <label class="custom-control custom-checkbox">
+                                            <div class="custom-control custom-checkbox">
                                                 <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                                 <input name="@area.value.toString" type="hidden" value="Off">
-                                                <span class="custom-control-indicator"></span>
+                                                <label class="custom-control-label" for="@area.value.toString">
                                                 @if(area.isCompositeValue) {
                                                     <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                                 } else {
                                                     <span class="custom-control-description">@area.niceValue</span>
                                                 }
-                                            </label>
+                                                </label>
+                                            </div>
                                         </div>
                                     </div>
                                 }
@@ -82,6 +61,8 @@
                         </div>
                     </fieldset>
                 </div>
+
+
                 <div class="termly-plans-fieldset termly-plans-fieldset-health-and-wellbeing">
                     <fieldset>
                         <legend>Health and Wellbeing</legend>
@@ -90,16 +71,17 @@
                             @if(area.niceHeaderValueIfPresent().getOrElse("NONE") == "Health And Wellbeing" || area.niceValue() == "Health And Wellbeing") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
                                                 <span class="custom-control-description">@area.niceValue</span>
                                             }
-                                        </label>
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
                             }
@@ -117,16 +99,31 @@
                                 @if(area.niceSpecificValueIfPresent().getOrElse("NONE") != "Literacy And English") {
                                     <div class="col">
                                         <div class="form-group">
-                                            <label class="custom-control custom-checkbox">
-                                                <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
-                                                <input name="@area.value.toString" type="hidden" value="Off">
-                                                <span class="custom-control-indicator"></span>
-                                                @if(area.isCompositeValue) {
-                                                    <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
-                                                } else {
-                                                    <span class="custom-control-description">@area.niceValue</span>
-                                                }
-                                            </label>
+
+                                            @if(area.niceValue() == "Literacy : Writing" || area.niceValue() == "Literacy : Reading") {
+                                                <div class="custom-control custom-checkbox">
+                                                    <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                                    <input name="@area.value.toString" type="hidden" value="Off">
+                                                    <label class="custom-control-label" for="@area.value.toString">
+                                                    @if(area.isCompositeValue) {
+                                                        <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
+                                                    } else {
+                                                        <span class="custom-control-description">@area.niceValue</span>
+                                                    }
+                                                </div>
+                                            }else {
+                                                <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                                    <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
+                                                    <input name="@area.value.toString" type="hidden" value="Off">
+                                                    <label class="custom-control-label" for="@area.value.toString">
+                                                    @if(area.isCompositeValue) {
+                                                        <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
+                                                    } else {
+                                                        <span class="custom-control-description">@area.niceValue</span>
+                                                    }
+                                                </div>
+                                            }
+
                                         </div>
                                     </div>
                                 }
@@ -143,16 +140,16 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Mathematics") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
+                                        <div class="custom-control custom-checkbox">
                                             <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
                                                 <span class="custom-control-description">@area.niceValue</span>
                                             }
-                                        </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -169,10 +166,10 @@
                             @if(area.isCompositeValue && area.niceHeaderValueIfPresent().getOrElse("NONE") == "RME") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                        <label class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
@@ -195,16 +192,16 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Science") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
                                                 <span class="custom-control-description">@area.niceValue</span>
                                             }
-                                        </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -220,16 +217,16 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Social Studies") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
                                                 <span class="custom-control-description">@area.niceValue</span>
                                             }
-                                        </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -245,16 +242,16 @@
                             @if(area.isNotCompositeValue && area.niceValue() == "Technologies") {
                                 <div class="col">
                                     <div class="form-group">
-                                        <label class="custom-control custom-checkbox">
-                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On">
+                                        <div class="custom-control custom-checkbox" data-toggle="tooltip" data-placement="top" title="These Es&Os/Benchmarks not in the database yet">
+                                            <input id="@area.value.toString" name="@area.value.toString" type="checkbox" class="custom-control-input" value="On" disabled>
                                             <input name="@area.value.toString" type="hidden" value="Off">
-                                            <span class="custom-control-indicator"></span>
+                                            <label class="custom-control-label" for="@area.value.toString">
                                             @if(area.isCompositeValue) {
                                                 <span class="custom-control-description">@area.niceSpecificValueIfPresent().getOrElse(area.niceValue())</span>
                                             } else {
                                                 <span class="custom-control-description">@area.niceValue</span>
                                             }
-                                        </label>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -279,7 +276,10 @@
 
     <script>
             $(function () {
-                $('#es-and-os-alert').alert()
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+            $(function () {
+                $('[data-toggle="popover"]').popover();
             });
     </script>
 
