--- a/server/public/stylesheets/termlyplans.css
+++ b/server/public/stylesheets/termlyplans.css
@@ -46,6 +46,11 @@
     margin-bottom: 1rem;
 }
 
+.termly-plans-overview-section-alert {
+    margin-top: 2.5rem;
+    margin-bottom: 1rem;
+}
+
 .termly-plans-overview-container {
     padding-left: 2rem;
     padding-right: 2rem;
