--- a/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
+++ b/server/app/views/planning/termly/termlyPlansForClassOverallOverview.scala.html
@@ -36,7 +36,7 @@
     <div class="container">
 
         <div class="termly-plans-overview-section text-center">
-            <h6 class="termly-plans-overview-section-header">% Termly Plan Complete</h6>
+            <h6 class="termly-plans-overview-section-header">% Overall Plan Progress</h6>
             <div class="progress">
             @{
                 if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
