--- a/server/app/views/main.scala.html
+++ b/server/app/views/main.scala.html
@@ -110,7 +110,7 @@
 
                 <div class="col-md-6 mx-auto">
                     <p>
-                        <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-danger btn-block">
+                        <a href="@routes.UserSignupController.signupStep1()" class="btn btn-lg btn-success btn-block">
                             Create Test Account
                         </a>
                     </p>
