--- a/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
+++ b/server/app/views/planning/termly/termlyPlansSelectEsOsBenchmarksForCurriculumAreaAtClassLevel.scala.html
@@ -43,7 +43,7 @@
 } {
         <div class="container">
 
-            <h6 class="termly-plans-overview-section-header text-center">% Termly Plan Complete</h6>
+            <h6 class="termly-plans-overview-section-header text-center">% Overall Plan Progress</h6>
             <div class="progress">
             @{
                 if(classIdToOverallProgress.isDefinedAt(classDetails.id)) {
