--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -1,8 +1,8 @@
 @import duplicate.model.ClassDetails
-@import models.timetoteach.ui._
-@import models.timetoteach.planning.pdf.CurriculumAreaTermlyPlanForPdfWrapper
-@import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
 @import io.sudostream.timetoteach.messages.scottish.ScottishCurriculumPlanningArea
+@import models.timetoteach.planning.ScottishCurriculumPlanningAreaWrapper
+@import models.timetoteach.planning.pdf.CurriculumAreaTermlyPlanForPdfWrapper
+@import models.timetoteach.ui._
 
 @(handler: be.objectify.deadbolt.scala.DeadboltHandler,
         userPictureUri: Option[String],
@@ -12,50 +12,76 @@
         currentTermlyPlan: CurriculumAreaTermlyPlanForPdfWrapper
 )
 
+@tabContentActiveOrNot(index: Int) = {
+@{s"""tab-pane fade ${if(index == 0) "show active"} """.trim.replace("\n", "")}
+}
+
+@activeLink(index: Int) = {
+@{s"""nav-link ${if(index == 0) "active" else ""} """.trim}
+}
+
+@indexActive(index: Int) = {
+@{s"""${if(index == 0) "true" else "false"} """.trim}
+}
+
 @_templateWeeklyPlanning(handler, userPictureUri, userFirstName, userFamilyName, classDetails, CLASS_WEEKLY_PLANS, Some(CREATE_WEEKLY_PLAN)) {
 
     <div class="container">
         <div class="create-weekly-plans-section">
             <h4 class="display-5 text-center create-weekly-plans-header">Create Weekly Plan</h4>
+            <h5 class="text-center create-weekly-plans-sub-header text-info">
+                Select the Es & Os / Benchmarks you'll be covering this week for each area</h5>
 
             <div class="create-weekly-plans-main-section">
-            @for(planningArea <- currentTermlyPlan.fullTermlyPlan.keys) {
-                <div class="create-weekly-plans-planning-area">
-                    <div class="create-weekly-plans-planning-area-header">@planningArea.niceValue()</div>
-                    @for(termlyPlanForArea <- currentTermlyPlan.fullTermlyPlan(planningArea).sortBy(elem => elem.orderNumber)) {
-                        @if(termlyPlanForArea.planningArea.toString.contains(ScottishCurriculumPlanningArea.EXPRESSIVE_ARTS.toString)) {
-                            <div class="create-weekly-plans-planning-area-sub-header ">
-                            @{
-                                ScottishCurriculumPlanningAreaWrapper(termlyPlanForArea.planningArea).niceSubjectLevelValue()
-                            }
-                            </div>
-                        } else {
-                            <div class="create-weekly-plans-planning-area-sub-header ">
-                                @{
-                                    termlyPlanForArea.maybeGroup match {
-                                        case Some(group) => s"${group.groupName.name}"
-                                        case None => ""
-                                    }
-                                }
-
-                                <span class="create-weekly-plans-group-level ">
-                                @{
-                                    termlyPlanForArea.maybeGroup match {
-                                        case Some(group) => s" - ${group.groupLevel.value.replace("Level", " Level")}"
-                                        case None => ""
-                                    }
-                                }
-                                </span>
-                            </div>
-                        }
-
+                <ul class="nav nav-tabs" id="myTab" role="tablist">
+                @for((planningArea, indexPlanningArea) <- currentTermlyPlan.fullTermlyPlan.keys.zipWithIndex) {
+                    @if(indexPlanningArea == 0) {
+                        <li class="nav-item">
+                            <a class="nav-link active"
+                            id="weekly-plans-tab_@planningArea.value.toString"
+                            aria-controls="weekly-plans-tab_content_@planningArea.value.toString"
+                            href="#weekly-plans-tab-content_@planningArea.value.toString"
+                            data-toggle="tab" role="tab" aria-selected="true">
+                            @planningArea.niceValue()
+                            </a>
+                        </li>
+                    } else {
+                        <li class="nav-item">
+                            <a class="nav-link"
+                            id="weekly-plans-tab_@planningArea.value.toString"
+                            aria-controls="weekly-plans-tab_content_@planningArea.value.toString"
+                            href="#weekly-plans-tab-content_@planningArea.value.toString"
+                            data-toggle="tab" role="tab" aria-selected="false">
+                            @planningArea.niceValue()
+                            </a>
+                        </li>
                     }
+                }
+                </ul>
+
+                <div class="tab-content" id="myTabContent">
+                @for((planningArea, indexPlanningArea) <- currentTermlyPlan.fullTermlyPlan.keys.zipWithIndex) {
+                    @if(indexPlanningArea == 0) {
+                        <div class="tab-pane fade show active"
+                        id="weekly-plans-tab-content_@planningArea.value.toString"
+                        role="tabpanel" >
+                            Hello this is tab_content_@planningArea.value.toString
+                        </div>
+                    } else {
+                        <div class="tab-pane fade"
+                        id="weekly-plans-tab-content_@planningArea.value.toString"
+                        role="tabpanel" >
+                            Hello this is tab_content_@planningArea.value.toString
+                        </div>
+                    }
+                }
                 </div>
-            }
+
             </div>
 
         </div>
     </div>
+
 
     @scalajs.html.scripts("client", routes.Assets.versioned(_).toString, name => getClass.getResource(s"/public/$name") != null)
 }
