--- a/server/public/stylesheets/weeklyplans-create-plan.css
+++ b/server/public/stylesheets/weeklyplans-create-plan.css
@@ -4,8 +4,13 @@
 
 .create-weekly-plans-header {
     font-size: 1.9rem;
+}
+
+.create-weekly-plans-sub-header {
+    font-size: 1.2rem;
     margin-bottom: 3rem;
 }
+
 .create-weekly-plans-main-section {
 
 }
