--- a/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
+++ b/server/app/views/planning/weekly/_templateWeeklyPlanning.scala.html
@@ -76,7 +76,8 @@
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <p>Note: The weekly planning is under development - i.e. it will be changing rapidly. It is useful to
+                <p>Note: The weekly planning is under development</p>
+                <p>i.e. it isn't finished & will be changing rapidly. It is useful to
                     <em>get an idea</em> of what it will look like.</p>
             </div>
         </div>
