--- a/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
+++ b/server/app/views/planning/weekly/createPlanForTheWeek.scala.html
@@ -76,7 +76,7 @@
                 }
                 </ul>
 
-                <div class="tab-content" id="myTabContent">
+                <div class="tab-content" id="create-weekly-plans-outer-tab">
                 @for((planningArea, indexPlanningArea) <- currentTermlyPlan.fullTermlyPlan.keys.zipWithIndex) {
                     @if(indexPlanningArea == 0) {
                         <div class="tab-pane fade show active"
